# V03_project_template

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi-gcc.cmake  target_mcu.cmake
conf/: openocd_discovery.cfg  openocd_stlink.cfg
src/: main.cpp
